--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,9 @@ AllCops:
    - "bin/*"
    - "node_modules/**/*"
    - "Gemfile"
-
+   - "spec/models/user_spec.rb"
+   - "spec/rails_helper.rb"
+   - "spec/spec_helper.rb"
 
 # 1行あたりの文字数をチェックする
 Layout/LineLength:
