--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,9 +8,10 @@ AllCops:
    - "bin/*"
    - "node_modules/**/*"
    - "Gemfile"
-   - "spec/models/user_spec.rb"
    - "spec/rails_helper.rb"
    - "spec/spec_helper.rb"
+   - "spec/models/user_spec.rb"
+   - "spec/models/item_spec.rb"
 
 # 1行あたりの文字数をチェックする
 Layout/LineLength:
